--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -105,23 +105,23 @@
                 android:onClick="onClick_switchCamera"
                 android:src="@drawable/ic_camera_rear_white_36dp" />
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:gravity="bottom"
-                android:orientation="vertical"
-                android:paddingBottom="5dp"
-                android:visibility="visible" >
+            <!--<LinearLayout-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="fill_parent"-->
+                <!--android:gravity="bottom"-->
+                <!--android:orientation="vertical"-->
+                <!--android:paddingBottom="5dp"-->
+                <!--android:visibility="visible" >-->
 
-                <ImageButton
-                    android:id="@+id/helpButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="#00000000"
-                    android:onClick="onClick_gotoAbout"
-                    android:src="@drawable/ic_help_outline_white_36dp" />
-            </LinearLayout>
+                <!--<ImageButton-->
+                    <!--android:id="@+id/helpButton"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:background="#00000000"-->
+                    <!--android:onClick="onClick_gotoAbout"-->
+                    <!--android:src="@drawable/ic_help_outline_white_36dp" />-->
+            <!--</LinearLayout>-->
         </LinearLayout>
     </FrameLayout>
     <com.google.android.gms.ads.AdView
